# kanpig

./: .gitignore  Analysis.ipynb  Cargo.toml  Development.ipynb  LICENSE  README.md  changelog.md  kdp.py  kfdphase_cosine.py  setup.py
.github/workflows/: build.yml  release.yml
demo/: .gitignore  README.md  extract.py  hg002.test.bam  hg002.test.bam.bai  hg002.test.vcf.gz.tbi  quick_compare.py  run.sh  small.chr5.fa.gz.fai  small.chr5.fa.gz.gzi  summary.sh
experiments/: Analysis.ipynb  Development.ipynb  accuracy.py  bedtest.sh  cnthom.py  density_counter.py  how_similar.py
experiments/manuscript/: alstate_summary.py  annotate.merge.py  consistency.py
experiments/prototype/: setup.py
experiments/prototype/kdp/: graph.py  haps.py
kanplug/: .gitignore  Cargo.toml  bedtest.sh
kanplug/src/: bamparser.rs  bedparser.rs  chunker.rs  haplotype.rs  kmer.rs  main.rs  metrics.rs  vcf_traits.rs
kdp/: __init__.py  __main__.py  bam_parsing.py  cli.py  graph.py  haps.py  kdp.py  kmer.py  similarity.py
kdprs/: Cargo.toml  Readme.md  bedtest.sh
kdprs/src/: bamparser.rs  bedparser.rs  chunker.rs  cli.rs  comparisons.rs  graph.rs  haplotype.rs  kmeans.rs  kmer.rs  main.rs  metrics.rs  pathscore.rs  pileup.rs  regions.rs  similarity.rs  t.py  to.impl  traverse.rs  vargraph.rs  vcf.rs  vcf_traits.rs  vcfiterator.rs
ploidy_beds/: README.md  chm13v2.0_female.bed  chm13v2.0_male.bed  genome.bed  grch38_female.bed  grch38_male.bed
src/: bamparser.rs  genotype_main.rs  haplotype.rs  lib.rs  main.rs  metrics.rs  paste_main.rs  pathscore.rs  plup_main.rs  traverse.rs  vargraph.rs  vcfwriter.rs
src/kanpig/: annotator.rs  bamparser.rs  bedparser.rs  cli.rs  cluster.rs  filter_flags.rs  haplotype.rs  kmeans.rs  kmer.rs  metrics.rs  mod.rs  pathscore.rs  pileup.rs  regions.rs  traverse.rs  vargraph.rs  vcf_traits.rs  vcfreader.rs  vcfwriter.rs
src/kanplug/: bamparser.rs  chunker.rs  haplotype.rs  mod.rs  pathscore.rs  pileup.rs  regions.rs  traverse.rs  vargraph.rs  vcf_traits.rs  vcfwriter.rs
src/kplib/: annotator.rs  bamparser.rs  bedparser.rs  cli.rs  cluster.rs  genotype_main.rs  genotyper.rs  haplotype.rs  kmeans.rs  kmer.rs  metrics.rs  mod.rs  pathscore.rs  pileup.rs  pileup_index.rs  ploidy.rs  plup_main.rs  plupparser.rs  readparser.rs  readparsers.rs  regions.rs  traverse.rs  vargraph.rs  vcf_traits.rs  vcfreader.rs  vcftraits.rs  vcfwriter.rs
test/subtests/: README.md  region_maker.py
