[package]
name = "kanpig"
version = "1.0.0-dev"
edition = "2021"

[dependencies]
kmedoids = { version = "0.5.3" }
bitflags = { version = "2.5.0" }
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = { version = "0.5.12" }
indexmap = { version = "2.2.3" }
indicatif = { version = "0.17.8" }
itertools = { version = "0.12.1" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4", features = ["std", "serde"] }
noodles-vcf = { version = "0.57.0" }
ordered-float = { version = "4.0", default-features = false }
page_size = { version = "0.6.0" }
petgraph = { version = "0.6.2" }
pretty_env_logger = { version = "0.4.0" }
rust-htslib = { version = "0.46.0" }
rust-lapper = { version = "1.1.0" }
ndarray = "0.16.1"
rand = "0.8.5"

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
incremental = false
