[package]
name = "kanpig"
version = "1.0.0-dev"
edition = "2021"

[dependencies]
bitflags = { version = "2.6.0" }
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = { version = "0.5.13" }
indexmap = { version = "2.7.0" }
indicatif = { version = "0.17.9" }
itertools = { version = "0.13.0" }
kmedoids = { version = "0.5.3" }
lazy_static = { version = "1.5.0" }
log = { version = "0.4", features = ["std", "serde"] }
ndarray = "0.16.1"
noodles-vcf = { version = "0.68.0" }
ordered-float = { version = "4.0", default-features = false }
page_size = { version = "0.6.0" }
petgraph = { version = "0.6.5" }
pretty_env_logger = { version = "0.5.0" }
rand = "0.8.5"
rust-htslib = { version = "0.49.0" }
rust-lapper = { version = "1.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
incremental = false
