[package]
name = "kdprs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
noodles-vcf = { version = "0.49.0" }
petgraph = { version = "0.6.2" }
pretty_env_logger = { version = "0.4.0" }
simsimd = { version = "3.8.0" }
