[package]
name = "kdprs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indexmap = { version = "2.2.3" }
itertools = { version = "0.12.1" }
log = { version = "0.4", features = ["std", "serde"] }
noodles-vcf = { version = "0.49.0" }
ordered-float = { version = "4.0", default-features = false }
petgraph = { version = "0.6.2" }
pretty_env_logger = { version = "0.4.0" }
rand = "0.8.5"
rust-htslib = "0.46.0"
simsimd = { version = "3.8.0" }
